# DefiGenius

./: README.md  index.html  lender-keypair.json  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.css
src/components/: CSVUploader.tsx  FeatureCard.tsx  Footer.tsx  Layout.tsx  Navbar.tsx  PastScores.tsx  QuestionCard.tsx  Quiz.tsx  QuizApp.tsx  QuizConfig.tsx  QuizReview.tsx  QuizTimer.tsx  ResultCard.tsx  WalletConnect.tsx
src/context/: WalletContextProvider.tsx
src/hooks/: program_fund.js  useLoans.ts  useProgramFund.ts  useSolanaWallet.ts
src/pages/: AIAgent.tsx  About.tsx  DAO.tsx  Dashboard.tsx  Index.tsx  Learn.tsx  Loans.tsx  NewLoan.tsx  NotFound.tsx  TestLoan.tsx
src/services/: loanProgramService.ts  simulationService.ts  solanaService.ts
src/solana/: build.sh  deploy.sh
src/solana/program/: Cargo.toml
src/solana/program/src/: lib.rs  loan_program.rs
src/types/: quiz-types.ts
src/utils/: csvParser.ts  quizUtils.ts  storageUtils.ts  timerUtils.ts
