[package]
name = "loan_program"
version = "0.1.0"
edition = "2021"
description = "A Solana program for managing loans"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "loan_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.17.0"
borsh = "0.10.3"
thiserror = "1.0.50" 